Add login controller
